# SirAlfred

./: README.md  requirements.txt  setup.cfg  sir_alfred.py
clients/: expressvpn.py  ipvanish.py  nord.py
modules/: clientlist.py  header.py  keyevents.py  servers.py  settings.py
test/: keyevents.py  settings.py  test.py
