[metadata]
name = Sir-Alfred-g3th
version = 1.3
author = Roberto Toledo
author_email = theinkandpen@yahoo.co.uk
description = ADB Account Checker
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/g3th/Sir-Alfred
project_urls =
    Bug Tracker = https://github.com/g3th/Sir-Alfred/issues
classifiers =
    Programming Language :: Python 3.10.4
    License :: OSI Approved :: MIT License
    Operating System :: Linux/Debian

[options]
packages = find:
python_requires = >=3.10
install_requires = 
    pure-python-adb
